Define placeholder for inputs and outputs

--- a/Tensorflow/neural_networks.ipynb
+++ b/Tensorflow/neural_networks.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +152,24 @@
     "n_output = 1 # number of output units\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define placeholder for input and output\n",
+    "X = tf.Variable(tf.random.normal([1, n_input]), dtype=tf.float32)\n",
+    "y = tf.Variable(tf.random.normal([1, n_output]), dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
