Define biases and weights for each layer

--- a/Tensorflow/neural_networks.ipynb
+++ b/Tensorflow/neural_networks.ipynb
@@ -166,10 +166,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define biases and weights for each layer\n",
+    "w1 = tf.Variable(tf.random.normal([n_input,n_hidden])) # weights from input to hidden layer\n",
+    "b1 = tf.Variable(tf.random.normal([n_hidden])) # biases for hidden layer\n",
+    "w2 = tf.Variable(tf.random.normal([n_input,n_output]))# weights from hidden to output layer\n",
+    "b2 = tf.Variable(tf.random.normal([n_output])) # biases for output layer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define activation functions for each layer\n",
+    "z1 = tf.add(tf.matmul(X, w1,b1)) #"
+   ]
   }
  ],
  "metadata": {
