Define activation functions for each layer

--- a/Tensorflow/neural_networks.ipynb
+++ b/Tensorflow/neural_networks.ipynb
@@ -184,7 +184,11 @@
    "outputs": [],
    "source": [
     "# Define activation functions for each layer\n",
-    "z1 = tf.add(tf.matmul(X, w1,b1)) #"
+    "z1 = tf.add(tf.matmul(X, w1),b1) # linear combination for hidden layer\n",
+    "a1 = tf.nn.sigmoid(z1)\n",
+    "z2= tf.add(tf.matmul(a1,w2),b2) # Linear combination for output layer\n",
+    "a2 = tf.nn.sigmoid(z2) # sigmoid activation for output layers\n",
+    "\n"
    ]
   }
  ],
