Define activation functions for each layer

--- a/Tensorflow/neural_networks.ipynb
+++ b/Tensorflow/neural_networks.ipynb
@@ -166,15 +166,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define biases and weights for each layer\n",
     "w1 = tf.Variable(tf.random.normal([n_input,n_hidden])) # weights from input to hidden layer\n",
     "b1 = tf.Variable(tf.random.normal([n_hidden])) # biases for hidden layer\n",
-    "w2 = tf.Variable(tf.random.normal([n_input,n_output]))# weights from hidden to output layer\n",
+    "w2 = tf.Variable(tf.random.normal([n_hidden,n_output]))# weights from hidden to output layer\n",
     "b2 = tf.Variable(tf.random.normal([n_output])) # biases for output layer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ TensorFlow 2.x optimizer implemented correctly!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define optimizer using TensorFlow 2.x API\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.1)\n",
+    "\n",
+    "# Compute gradients and apply them\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z1 = tf.add(tf.matmul(X, w1), b1)  # Linear combination for hidden layer\n",
+    "    a1 = tf.nn.sigmoid(z1)  # Activation function\n",
+    "\n",
+    "    z2 = tf.add(tf.matmul(a1, w2), b2)  # Linear combination for output layer\n",
+    "    a2 = tf.nn.sigmoid(z2)  # Activation function\n",
+    "\n",
+    "    cost = tf.reduce_mean(tf.square(y - a2))  # Mean squared error loss\n",
+    "\n",
+    "gradients = tape.gradient(cost, [w1, b1, w2, b2])\n",
+    "optimizer.apply_gradients(zip(gradients, [w1, b1, w2, b2]))\n",
+    "\n",
+    "print(\"✅ TensorFlow 2.x optimizer implemented correctly!\")\n"
    ]
   },
   {
@@ -182,14 +215,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Define activation functions for each layer\n",
-    "z1 = tf.add(tf.matmul(X, w1),b1) # linear combination for hidden layer\n",
-    "a1 = tf.nn.sigmoid(z1)\n",
-    "z2= tf.add(tf.matmul(a1,w2),b2) # Linear combination for output layer\n",
-    "a2 = tf.nn.sigmoid(z2) # sigmoid activation for output layers\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
