--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -17,14 +17,152 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 32, 32, 32)        896       \n",
+      "                                                                 \n",
+      " batch_normalization (Batch  (None, 32, 32, 32)        128       \n",
+      " Normalization)                                                  \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 32, 32, 32)        9248      \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Bat  (None, 32, 32, 32)        128       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2  (None, 16, 16, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 16, 16, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 16, 16, 64)        18496     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Bat  (None, 16, 16, 64)        256       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 16, 16, 64)        36928     \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Bat  (None, 16, 16, 64)        256       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 8, 8, 64)          0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 8, 8, 64)          0         \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (None, 8, 8, 128)         73856     \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Bat  (None, 8, 8, 128)         512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 8, 8, 128)         147584    \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Bat  (None, 8, 8, 128)         512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 4, 4, 128)         0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 4, 4, 128)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 2048)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               262272    \n",
+      "                                                                 \n",
+      " batch_normalization_6 (Bat  (None, 128)               512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 552874 (2.11 MB)\n",
+      "Trainable params: 551722 (2.10 MB)\n",
+      "Non-trainable params: 1152 (4.50 KB)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_cnn_models():\n",
+    "    model = models.Sequential()\n",
+    "    model.add(layers.Conv2D(32,(3,3), activation='relu', padding='same', input_shape=(32,32,3)))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.Conv2D(32,(3,3), activation='relu', padding='same'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D((2,2)))\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "\n",
+    "    model.add(layers.Conv2D(64,(3,3), activation='relu', padding='same', input_shape=(32,32,3)))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.Conv2D(64,(3,3), activation='relu', padding='same'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D((2,2)))\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "\n",
+    "    model.add(layers.Conv2D(128,(3,3), activation='relu', padding='same', input_shape=(32,32,3)))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.Conv2D(128,(3,3), activation='relu', padding='same'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D((2,2)))\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "\n",
+    "    model.add(layers.Flatten())\n",
+    "    model.add(layers.Dense(128, activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "    model.add(layers.Dense(10, activation='softmax'))\n",
+    "    return model\n",
+    "\n",
+    "model = create_cnn_models()\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
