--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -140,10 +140,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.datasets import cifar10\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load and process data\n",
+    "(train_images, train_labels), (test_images, test_labels)= cifar10.load_data()\n",
+    "train_images = train_images.astype('float32')/ 255\n",
+    "test_images = test_images.astype('float32')/255\n",
+    "train_labels = to_categorical(train_labels)\n",
+    "test_labels = to_categorical(test_labels)\n",
+    "\n",
+    "# comp"
+   ]
   }
  ],
  "metadata": {
