--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -152,7 +152,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "170498071/170498071 [==============================] - 199s 1us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-27 14:48:39.468415: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 491520000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "625/625 [==============================] - ETA: 0s - loss: 1.8482 - accuracy: 0.3715"
+     ]
+    }
+   ],
    "source": [
     "# Load and process data\n",
     "(train_images, train_labels), (test_images, test_labels)= cifar10.load_data()\n",
@@ -161,8 +185,17 @@
     "train_labels = to_categorical(train_labels)\n",
     "test_labels = to_categorical(test_labels)\n",
     "\n",
-    "# comp"
+    "# compile and train the model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.fit(train_images, train_labels, epochs=10, batch_size=64, validation_split=0.2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
