Recurrent Neural Network intro

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -173,7 +173,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "625/625 [==============================] - ETA: 0s - loss: 1.8482 - accuracy: 0.3715"
+      "625/625 [==============================] - 255s 401ms/step - loss: 1.8482 - accuracy: 0.3715 - val_loss: 1.4537 - val_accuracy: 0.4806\n",
+      "Epoch 2/10\n",
+      "625/625 [==============================] - 256s 409ms/step - loss: 1.2730 - accuracy: 0.5416 - val_loss: 1.1565 - val_accuracy: 0.5849\n",
+      "Epoch 3/10\n",
+      "625/625 [==============================] - 243s 389ms/step - loss: 1.0790 - accuracy: 0.6166 - val_loss: 0.9200 - val_accuracy: 0.6730\n",
+      "Epoch 4/10\n",
+      "625/625 [==============================] - 225s 359ms/step - loss: 0.9629 - accuracy: 0.6596 - val_loss: 0.8285 - val_accuracy: 0.7014\n",
+      "Epoch 5/10\n",
+      "625/625 [==============================] - 203s 325ms/step - loss: 0.8728 - accuracy: 0.6965 - val_loss: 0.7484 - val_accuracy: 0.7365\n",
+      "Epoch 6/10\n",
+      "625/625 [==============================] - 238s 381ms/step - loss: 0.8191 - accuracy: 0.7154 - val_loss: 0.8712 - val_accuracy: 0.6953\n",
+      "Epoch 7/10\n",
+      "625/625 [==============================] - ETA: 0s - loss: 0.7681 - accuracy: 0.7326"
      ]
     }
    ],
