Recurrent Neural Network: load and preprocess data

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -185,7 +185,9 @@
       "Epoch 6/10\n",
       "625/625 [==============================] - 238s 381ms/step - loss: 0.8191 - accuracy: 0.7154 - val_loss: 0.8712 - val_accuracy: 0.6953\n",
       "Epoch 7/10\n",
-      "625/625 [==============================] - ETA: 0s - loss: 0.7681 - accuracy: 0.7326"
+      "625/625 [==============================] - 242s 388ms/step - loss: 0.7681 - accuracy: 0.7326 - val_loss: 0.6987 - val_accuracy: 0.7540\n",
+      "Epoch 8/10\n",
+      "625/625 [==============================] - ETA: 0s - loss: 0.7310 - accuracy: 0.7464"
      ]
     }
    ],
