--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -93,11 +93,66 @@
     "- They suffer from vanishing gradients, which LSTMs and GRUs solve.\n",
     "- Used in speech, text, finance, and forecasting tasks.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.datasets import imdb\n",
+    "from tensorflow.keras.preprocessing import sequence\n",
+    "from tensorflow.keras import layers, models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+      "17464789/17464789 [==============================] - 13s 1us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load and preprocess data\n",
+    "max_features = 10000\n",
+    "max_len = 500\n",
+    "(X_train,y_train),(X_test, y_test) = imdb.load_data(num_words=max_features)\n",
+    "X_train = sequence.pad_sequences(X_train, maxlen=max_len)\n",
+    "X_test = sequence.pad_sequences(X_test, maxlen=max_len)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
