Recurrent Neural Network: Build model

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -187,7 +187,9 @@
       "Epoch 7/10\n",
       "625/625 [==============================] - 242s 388ms/step - loss: 0.7681 - accuracy: 0.7326 - val_loss: 0.6987 - val_accuracy: 0.7540\n",
       "Epoch 8/10\n",
-      "625/625 [==============================] - ETA: 0s - loss: 0.7310 - accuracy: 0.7464"
+      "625/625 [==============================] - 294s 470ms/step - loss: 0.7310 - accuracy: 0.7464 - val_loss: 0.6510 - val_accuracy: 0.7746\n",
+      "Epoch 9/10\n",
+      "436/625 [===================>..........] - ETA: 1:29 - loss: 0.6928 - accuracy: 0.7590"
      ]
     }
    ],
