--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -130,6 +130,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, None, 32)          320000    \n",
+      "                                                                 \n",
+      " simple_rnn (SimpleRNN)      (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 322113 (1.23 MB)\n",
+      "Trainable params: 322113 (1.23 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build model\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Embedding(max_features, 32))\n",
+    "model.add(layers.SimpleRNN(32))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
