Recurrent Neural Network: compile and train the model

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -189,7 +189,9 @@
       "Epoch 8/10\n",
       "625/625 [==============================] - 294s 470ms/step - loss: 0.7310 - accuracy: 0.7464 - val_loss: 0.6510 - val_accuracy: 0.7746\n",
       "Epoch 9/10\n",
-      "436/625 [===================>..........] - ETA: 1:29 - loss: 0.6928 - accuracy: 0.7590"
+      "625/625 [==============================] - 311s 497ms/step - loss: 0.6956 - accuracy: 0.7579 - val_loss: 0.6665 - val_accuracy: 0.7693\n",
+      "Epoch 10/10\n",
+      "314/625 [==============>...............] - ETA: 2:25 - loss: 0.6718 - accuracy: 0.7694"
      ]
     }
    ],
