Recurrent Neural Network: evaluate the model

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +191,18 @@
       "Epoch 9/10\n",
       "625/625 [==============================] - 311s 497ms/step - loss: 0.6956 - accuracy: 0.7579 - val_loss: 0.6665 - val_accuracy: 0.7693\n",
       "Epoch 10/10\n",
-      "314/625 [==============>...............] - ETA: 2:25 - loss: 0.6718 - accuracy: 0.7694"
+      "625/625 [==============================] - 348s 557ms/step - loss: 0.6665 - accuracy: 0.7707 - val_loss: 0.6210 - val_accuracy: 0.7855\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7f1ae5558040>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
