--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,14 +180,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/10\n",
+      "157/157 [==============================] - 65s 387ms/step - loss: 0.6257 - accuracy: 0.6349 - val_loss: 0.4673 - val_accuracy: 0.8026\n",
+      "Epoch 2/10\n",
+      "157/157 [==============================] - 62s 392ms/step - loss: 0.4021 - accuracy: 0.8285 - val_loss: 0.3720 - val_accuracy: 0.8458\n",
+      "Epoch 3/10\n",
+      "157/157 [==============================] - 61s 392ms/step - loss: 0.3104 - accuracy: 0.8754 - val_loss: 0.3671 - val_accuracy: 0.8514\n",
+      "Epoch 4/10\n",
+      "157/157 [==============================] - 47s 300ms/step - loss: 0.2454 - accuracy: 0.9053 - val_loss: 0.3532 - val_accuracy: 0.8624\n",
+      "Epoch 5/10\n",
+      "157/157 [==============================] - 23s 145ms/step - loss: 0.1888 - accuracy: 0.9291 - val_loss: 0.5823 - val_accuracy: 0.7968\n",
+      "Epoch 6/10\n",
+      "157/157 [==============================] - 25s 162ms/step - loss: 0.1292 - accuracy: 0.9536 - val_loss: 0.7581 - val_accuracy: 0.7622\n",
+      "Epoch 7/10\n",
+      "157/157 [==============================] - 28s 177ms/step - loss: 0.1707 - accuracy: 0.9414 - val_loss: 0.4738 - val_accuracy: 0.8420\n",
+      "Epoch 8/10\n",
+      "157/157 [==============================] - 25s 158ms/step - loss: 0.0665 - accuracy: 0.9799 - val_loss: 0.5171 - val_accuracy: 0.8420\n",
+      "Epoch 9/10\n",
+      "157/157 [==============================] - 23s 148ms/step - loss: 0.0531 - accuracy: 0.9848 - val_loss: 0.5786 - val_accuracy: 0.8248\n",
+      "Epoch 10/10\n",
+      "157/157 [==============================] - 22s 137ms/step - loss: 0.0358 - accuracy: 0.9890 - val_loss: 0.6592 - val_accuracy: 0.8078\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7f5aebe65820>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# compile and train the model\n",
     "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "model.fit(X_train, y_train, epochs=10, batch_size=128, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  3/782 [..............................] - ETA: 22s - loss: 0.6996 - accuracy: 0.8333"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-27 15:34:51.971803: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 50000000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "782/782 [==============================] - 20s 25ms/step - loss: 0.6706 - accuracy: 0.8086\n",
+      "Test accuracy: 0.8086400032043457\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "test_loss, test_acc = model.evaluate(X_test,y_test)\n",
+    "print(f\"Test accuracy: {test_acc}\")"
    ]
   },
   {
