Building a deep Neural Network

--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -257,6 +257,80 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_2 (Embedding)     (None, None, 32)          320000    \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 32)                8320      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 328353 (1.25 MB)\n",
+      "Trainable params: 328353 (1.25 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-27 15:39:58.914831: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 40000000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157/157 [==============================] - 102s 632ms/step - loss: 0.6075 - accuracy: 0.6547 - val_loss: 0.4354 - val_accuracy: 0.8130\n",
+      "Epoch 2/10\n",
+      "157/157 [==============================] - 94s 602ms/step - loss: 0.3699 - accuracy: 0.8454 - val_loss: 0.3695 - val_accuracy: 0.8470\n",
+      "Epoch 3/10\n",
+      "157/157 [==============================] - 70s 449ms/step - loss: 0.2851 - accuracy: 0.8880 - val_loss: 0.4401 - val_accuracy: 0.8322\n",
+      "Epoch 4/10\n",
+      "157/157 [==============================] - 81s 519ms/step - loss: 0.2454 - accuracy: 0.9075 - val_loss: 0.3593 - val_accuracy: 0.8622\n",
+      "Epoch 5/10\n",
+      "157/157 [==============================] - ETA: 0s - loss: 0.2172 - accuracy: 0.9180"
+     ]
+    }
+   ],
+   "source": [
+    "# Load and preprocess data\n",
+    "max_features = 10000\n",
+    "max_len = 500\n",
+    "(X_train,y_train),(X_test, y_test) = imdb.load_data(num_words=max_features)\n",
+    "X_train = sequence.pad_sequences(X_train, maxlen=max_len)\n",
+    "X_test = sequence.pad_sequences(X_test, maxlen=max_len)\n",
+    "\n",
+    "# Build model -LSTM\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Embedding(max_features, 32))\n",
+    "model.add(layers.LSTM(32, dropout=0.2,recurrent_dropout=0.2))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "model.summary()\n",
+    "\n",
+    "# compile and train the model\n",
+    "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=128, validation_split=0.2)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "test_loss, test_acc = model.evaluate(X_test,y_test)\n",
+    "print(f\"Test accuracy: {test_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
