--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -299,7 +299,15 @@
       "Epoch 4/10\n",
       "157/157 [==============================] - 81s 519ms/step - loss: 0.2454 - accuracy: 0.9075 - val_loss: 0.3593 - val_accuracy: 0.8622\n",
       "Epoch 5/10\n",
-      "157/157 [==============================] - ETA: 0s - loss: 0.2172 - accuracy: 0.9180"
+      "157/157 [==============================] - 85s 541ms/step - loss: 0.2172 - accuracy: 0.9180 - val_loss: 0.4121 - val_accuracy: 0.8342\n",
+      "Epoch 6/10\n",
+      "157/157 [==============================] - 77s 492ms/step - loss: 0.1942 - accuracy: 0.9276 - val_loss: 0.2931 - val_accuracy: 0.8874\n",
+      "Epoch 7/10\n",
+      "157/157 [==============================] - 87s 557ms/step - loss: 0.1843 - accuracy: 0.9325 - val_loss: 0.3073 - val_accuracy: 0.8660\n",
+      "Epoch 8/10\n",
+      "157/157 [==============================] - 102s 653ms/step - loss: 0.1622 - accuracy: 0.9424 - val_loss: 0.3236 - val_accuracy: 0.8864\n",
+      "Epoch 9/10\n",
+      " 10/157 [>.............................] - ETA: 1:37 - loss: 0.1481 - accuracy: 0.9461"
      ]
     }
    ],
