Building a deep Neural Network: compile the model

--- a/deep_neural_networks.ipynb
+++ b/deep_neural_networks.ipynb
@@ -82,6 +82,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compile the model\n",
+    "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
