--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -307,7 +307,7 @@
       "Epoch 8/10\n",
       "157/157 [==============================] - 102s 653ms/step - loss: 0.1622 - accuracy: 0.9424 - val_loss: 0.3236 - val_accuracy: 0.8864\n",
       "Epoch 9/10\n",
-      " 10/157 [>.............................] - ETA: 1:37 - loss: 0.1481 - accuracy: 0.9461"
+      "157/157 [==============================] - ETA: 0s - loss: 0.1530 - accuracy: 0.9465"
      ]
     }
    ],
