Building a deep Neural Network: load and preprocess the dataset

--- a/deep_neural_networks.ipynb
+++ b/deep_neural_networks.ipynb
@@ -59,12 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from keras.datasets import imdb\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense"
+    "from keras.layers import Dense, Embedding, Flatten\n",
+    "from keras.preprocessing.sequence import pad_sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the IMDB dataset\n",
+    "max_features = 10000  # Number of unique words to consider\n",
+    "max_len = 100  # Maximum length of a review\n",
+    "(X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=max_features)\n",
+    "# Preprocess the dataset: Pad sequences to have a uniform length\n",
+    "X_train = pad_sequences(X_train, maxlen=max_len)\n",
+    "X_test = pad_sequences(X_test, maxlen=max_len)"
    ]
   },
   {
@@ -95,7 +112,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train the model\n",
+    "model.fit(X_train, epochs=10, batch_size=32)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, accuracy, = model.evaluate(X_test, y_test, batch_size=32)"
+   ]
   }
  ],
  "metadata": {
