--- a/recurrent_neural_network.ipynb
+++ b/recurrent_neural_network.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,25 @@
       "Epoch 8/10\n",
       "157/157 [==============================] - 102s 653ms/step - loss: 0.1622 - accuracy: 0.9424 - val_loss: 0.3236 - val_accuracy: 0.8864\n",
       "Epoch 9/10\n",
-      "157/157 [==============================] - ETA: 0s - loss: 0.1530 - accuracy: 0.9465"
+      "157/157 [==============================] - 106s 674ms/step - loss: 0.1530 - accuracy: 0.9465 - val_loss: 0.3167 - val_accuracy: 0.8858\n",
+      "Epoch 10/10\n",
+      "157/157 [==============================] - 134s 858ms/step - loss: 0.1407 - accuracy: 0.9498 - val_loss: 0.6783 - val_accuracy: 0.8258\n",
+      "  1/782 [..............................] - ETA: 1:20 - loss: 0.6035 - accuracy: 0.8438"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-27 15:55:39.046078: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 50000000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "782/782 [==============================] - 47s 60ms/step - loss: 0.6918 - accuracy: 0.8214\n",
+      "Test accuracy: 0.8214399814605713\n"
      ]
     }
    ],
