Building a deep Neural Network: define the architecture of the network

--- a/deep_neural_networks.ipynb
+++ b/deep_neural_networks.ipynb
@@ -86,15 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the architecture of the network\n",
+    "# Define the deep neural network architecture\n",
     "model = Sequential()\n",
-    "model.add(Dense(64, activation='relu', input_dim=100))\n",
+    "model.add(Embedding(input_dim=max_features, output_dim=32, input_length=max_len))  # Embedding layer for word representation\n",
+    "model.add(Flatten())  # Flatten before feeding into Dense layers\n",
     "model.add(Dense(64, activation='relu'))\n",
-    "model.add(Dense(1, activation='sigmoid'))\n"
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))  # Sigmoid for binary classification"
    ]
   },
   {
