--- a/ underfitting_overfitting.ipynb
+++ b/ underfitting_overfitting.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "# Fixing the underfitting\n",
+    "# Fixing the underfitting - polynomial regression, feature engineering\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "# Generate polynomial features\n",
     "poly_features = PolynomialFeatures(degree=3)\n",
