--- a/ underfitting_overfitting.ipynb
+++ b/ underfitting_overfitting.ipynb
@@ -219,6 +219,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 0.9\n",
+      "Test accuracy: 0.825\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fixing overfitting - regularization\n",
+    "model = DecisionTreeClassifier(max_depth=2)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "y_test_pred = model.predict(X_test)\n",
+    "\n",
+    "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
+    "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"Train accuracy: {train_accuracy}\")\n",
+    "print(f\"Test accuracy: {test_accuracy}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
