--- a/ underfitting_overfitting.ipynb
+++ b/ underfitting_overfitting.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +233,7 @@
    ],
    "source": [
     "# Fixing overfitting - regularization\n",
+    "# Other methods -> cross-validation, dimensionality reduction\n",
     "model = DecisionTreeClassifier(max_depth=2)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
