--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Hyperparameter Tuning Explained**\n",
+    "### **Hyperparameter Tuning Explained**\n",
     "\n",
-    "## **1. What is Hyperparameter Tuning?**  \n",
+    "### **1. What is Hyperparameter Tuning?**  \n",
     "Hyperparameter tuning is the process of **choosing the best set of hyperparameters** for a machine learning model to improve its performance. Unlike model parameters (learned from data), hyperparameters are set **before training** and directly affect the learning process.\n",
     "\n",
-    "## **2. Examples of Hyperparameters**  \n",
+    "### **2. Examples of Hyperparameters**  \n",
     "- **Learning Rate (α):** Controls the step size in gradient descent.  \n",
     "- **Number of Hidden Layers & Neurons:** Defines the architecture of neural networks.  \n",
     "- **Batch Size:** Determines how many samples are processed before updating weights.  \n",
@@ -17,7 +17,7 @@
     "- **Regularization Strength (λ):** Prevents overfitting by penalizing large weights.  \n",
     "- **Dropout Rate:** Specifies the fraction of neurons to drop during training in deep learning.  \n",
     "\n",
-    "## **3. Methods for Hyperparameter Tuning**  \n",
+    "### **3. Methods for Hyperparameter Tuning**  \n",
     "\n",
     "### **(i) Grid Search**  \n",
     "- Tries **all possible combinations** of hyperparameters from a predefined set. \n",
@@ -31,7 +31,6 @@
     "      'n_estimators': [10, 50, 100],\n",
     "      'max_depth': [5, 10, 20]\n",
     "  }\n",
-    "  ```python\n",
     "  model = RandomForestClassifier()\n",
     "  grid_search = GridSearchCV(model, param_grid, cv=5)\n",
     "  grid_search.fit(X_train, y_train)\n",
@@ -76,6 +75,9 @@
     "- Monitor training time and computational cost.\n",
     "- Consider using automated tuning tools like Optuna, Hyperopt, or AutoML.\n",
     "\n",
+    "### Evaluating hyperparameters for performance\n",
+    "- Cross-validation - splitting the data into multiple folds and evaluating the model on each fold.\n",
+    "- Performance metrics - selecting appropriate evaluation metrics based on the problem type ex. accuracy, precision, recall, F1 score\n",
     "### Conclusion\n",
     "- Hyperparameter tuning is crucial for optimizing model performance. While Grid Search ensures optimal results, Random Search, Bayesian Optimization, and Genetic Algorithms provide efficient alternatives. The choice depends on the problem, computational resources, and time constraints.\n",
     "\n",
