Saving a trained model

--- a/Tensorflow/random_forests.ipynb
+++ b/Tensorflow/random_forests.ipynb
@@ -346,6 +346,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model\n",
+    "model = joblib.load('TunedForest.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
