Saving a trained model

--- a/convolutional_neural_networks.ipynb
+++ b/convolutional_neural_networks.ipynb
@@ -249,6 +249,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: model/1/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: model/1/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Deploying tensorflow model\n",
+    "tf.saved_model.save(model, 'model/1/')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
